--- a/configs/_mongod.conf
+++ b/configs/_mongod.conf
@@ -1,9 +1,9 @@
 systemLog:
   destination: file
-  path: path_to_be_set_by_prepare_config
+  path: ./logs/tutorial_training/220302-1853-mongo.log
   logAppend: true
 storage:
-  dbPath: path_to_be_set_by_prepare_config
+  dbPath: ./logs/tutorial_training/220302-1853-mongodb
   journal:
     enabled: true
   wiredTiger:
