--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ opencv-python==4.3.0.36
 opencv-contrib-python==4.3.0.36
 opencv-python-headless==4.3.0.36
 
+torch==1.10.1
+decorator<5,>=4.3
+
 catalyst
 catalyst-rl
 pillow<7
